# SDL2_Boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/sdl/: LFont.cpp  LFont.hpp  LTexture.cpp  LTexture.hpp  LWindow.cpp  LWindow.hpp
